| Bug #20770 | Partitions not removed after reorganize. | ||
|---|---|---|---|
| Submitted: | 29 Jun 2006 10:34 | Modified: | 19 Jul 2006 4:26 |
| Reporter: | Horst Hunger | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Partitions | Severity: | S3 (Non-critical) |
| Version: | 5.1.12 | OS: | Linux (Suse 10.1) |
| Assigned to: | Mikael Ronström | CPU Architecture: | Any |
[29 Jun 2006 10:34]
Horst Hunger
[29 Jun 2006 10:36]
Horst Hunger
program to reproduce the bug
Attachment: error_reorg_part2_8_92.test (application/octet-stream, text), 1.81 KiB.
[29 Jun 2006 12:03]
MySQL Verification Team
Thank you for the bug report. Verified as described: miguel@hegel:~/dbs/mysql-5.1/mysql-test/var/master-data/test> ls tb5_eng1#P#part9#SP#subpart92* tb5_eng1#P#part9#SP#subpart92.MYD tb5_eng1#P#part9#SP#subpart92.MYI
[5 Jul 2006 11:30]
Mikael Ronström
Needed to call set_up_table_before_create also when altering partitions Also found an error in default handling of options for subpartitions while at it
[18 Jul 2006 8:56]
Mikael Ronström
Will appear in 5.1.12
[19 Jul 2006 4:26]
Jon Stephens
Documented bugfix in 5.1.12 changelog.
